--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,17 @@
 FROM node:14-alpine
 
+RUN apk add --no-cache \
+    make \
+    gcc \
+    g++ \
+    python3 \
+    py3-pip \
+    texlive \
+    texmf-dist-latexextra \
+    texmf-dist-fontsextra \
+    texmf-dist-science \
+    texmf-dist-pictures
+
 WORKDIR /app
 
 COPY package*.json ./
