--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^7.0.4"
+    "handlebars": "^4.7.8",
+    "mongoose": "^7.0.4",
+    "node-latex": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
