--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.3",
+    "@mui/lab": "^6.0.0-beta.26",
     "@mui/material": "^6.4.3",
     "axios": "^1.7.9",
     "react": "^19.0.0",
