--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,14 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@floating-ui/react": "^0.27.4",
     "@mui/icons-material": "^6.4.3",
-    "@mui/lab": "^6.0.0-beta.26",
     "@mui/material": "^6.4.3",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "react": "^19.0.0",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1",
