--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,16 +1,8 @@
-FROM node:14-alpine
+FROM node:17-alpine
 
 RUN apk add --no-cache \
-    make \
-    gcc \
-    g++ \
-    python3 \
-    py3-pip \
     texlive \
-    texmf-dist-latexextra \
-    texmf-dist-fontsextra \
-    texmf-dist-science \
-    texmf-dist-pictures
+    font-noto
 
 WORKDIR /app
 
