--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:20-alpine
 
 RUN apk add --no-cache \
+    tzdata \
     texlive \
     texmf-dist-latexextra \
     texmf-dist-fontsextra
