--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
-version: '3'
-
 services:
 
   react:
     container_name: react
-    build: 
+    build:
       context: ./client
       dockerfile: Dockerfile
     ports:
@@ -44,20 +42,20 @@ services:
     volumes:
       - ./db/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
       - $MONGODB_MOUNT_PATH:/data/db
-  
-  mongo-express:
-    image: mongo-express
-    container_name: mongo-express
-    ports:
-      - $MONGOEXPRESS_LOCAL_PORT:$MONGOEXPRESS_DOCKER_PORT
-    restart: always
-    environment:
-      - ME_CONFIG_MONGODB_SERVER=mongo
-      - ME_CONFIG_MONGODB_ENABLE_ADMIN=false
-      - ME_CONFIG_MONGODB_AUTH_DATABASE=$MONGODB_DATABASE
-      - ME_CONFIG_MONGODB_AUTH_USERNAME=$MONGODB_ROOT_USER
-      - ME_CONFIG_MONGODB_AUTH_PASSWORD=$MONGODB_ROOT_USER_PASSWORD
-      - ME_CONFIG_BASICAUTH_USERNAME=$MONGODB_BASIC_USER
-      - ME_CONFIG_BASICAUTH_PASSWORD=$MONGODB_BASIC_USER_PASSWORD
-    depends_on:
-      - mongo
+
+  # mongo-express:
+  #   image: mongo-express
+  #   container_name: mongo-express
+  #   ports:
+  #     - $MONGOEXPRESS_LOCAL_PORT:$MONGOEXPRESS_DOCKER_PORT
+  #   restart: always
+  #   environment:
+  #     - ME_CONFIG_MONGODB_SERVER=mongo
+  #     - ME_CONFIG_MONGODB_ENABLE_ADMIN=false
+  #     - ME_CONFIG_MONGODB_AUTH_DATABASE=$MONGODB_DATABASE
+  #     - ME_CONFIG_MONGODB_AUTH_USERNAME=$MONGODB_ROOT_USER
+  #     - ME_CONFIG_MONGODB_AUTH_PASSWORD=$MONGODB_ROOT_USER_PASSWORD
+  #     - ME_CONFIG_BASICAUTH_USERNAME=$MONGODB_BASIC_USER
+  #     - ME_CONFIG_BASICAUTH_PASSWORD=$MONGODB_BASIC_USER_PASSWORD
+  #   depends_on:
+  #     - mongo
