feat: enhance PDF generation capabilities and update Docker configurations
- Added a build script to package.json for building the React app.
- Removed unused logo images from the public directory.
- Updated BaseForm component to conditionally render buttons based on available actions.
- Introduced a configuration module to manage PDF generation modes.
- Updated BaseUpdateForm to utilize the new PDF generation configuration.
- Modified Docker configurations to support different environments and improved volume management.
- Created separate Dockerfiles for local and external environments.
- Updated server connection string to use a unified MongoDB URI.
- Enhanced error handling in cover letter and profile generation to account for PDF generation settings.
- Cleaned up server and client package.json files for consistency.

--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,14 @@
-MONGODB_DATABASE=smart_resume_db
+NODE_ENV=development # development or production
 
+REACT_APP_PDF_GENERATION_MODE=external # local or external
+REACT_APP_SERVER_URL="localhost:8080"
+
+MONGODB_DATABASE=smart_resume_db
 MONGODB_ROOT_USER=root
 MONGODB_ROOT_USER_PASSWORD=root
-
 MONGODB_BASIC_USER=user
 MONGODB_BASIC_USER_PASSWORD=12345678
 
-MONGODB_LOCAL_PORT=27017
-MONGODB_DOCKER_PORT=27017
-
-MONGOEXPRESS_LOCAL_PORT=8081
-MONGOEXPRESS_DOCKER_PORT=8081
-
-EXPRESS_LOCAL_PORT=8080
-EXPRESS_DOCKER_PORT=8080
-
-REACT_APP_SERVER_URL="localhost:8080"
-REACT_LOCAL_PORT=3000
-REACT_DOCKER_PORT=3000
-
-REACT_APP=true
-NODE_ENV=development
-
-MONGODB_URL=mongodb
-MONGODB_MOUNT_PATH=./db/tmp
+MONGODB_URI="mongodb://root:root@mongo:27017/smart_resume_db"
 
 TZ=UTC
