--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "sass": "^1.84.0"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "browserslist": {
     "production": [
