--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,10 @@ services:
     container_name: react
     build:
       context: ./client
-      dockerfile: Dockerfile
+      dockerfile: 'Dockerfile.${NODE_ENV}'
     ports:
-      - $REACT_LOCAL_PORT:$REACT_DOCKER_PORT
-    volumes:
-      - ./client:/app
-      - /app/node_modules
+      - 80:3000
+      - 3000:3000
     env_file:
       - .env
     depends_on:
@@ -19,12 +17,9 @@ services:
     container_name: express
     build:
       context: ./server
-      dockerfile: Dockerfile
+      dockerfile: 'Dockerfile.${REACT_APP_PDF_GENERATION_MODE}'
     ports:
-      - $EXPRESS_LOCAL_PORT:$EXPRESS_DOCKER_PORT
-    volumes:
-      - ./server:/app
-      - /app/node_modules
+      - 8080:8080
     env_file:
       - .env
     depends_on:
@@ -34,20 +29,20 @@ services:
     image: mongo:latest
     container_name: mongo
     ports:
-      - $MONGODB_LOCAL_PORT:$MONGODB_DOCKER_PORT
+      - 27017:27017
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=$MONGODB_ROOT_USER
-      - MONGO_INITDB_ROOT_PASSWORD=$MONGODB_ROOT_USER_PASSWORD
-      - MONGO_INITDB_DATABASE=$MONGODB_DATABASE
+      - MONGO_INITDB_ROOT_USERNAME=${MONGODB_ROOT_USER}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGODB_ROOT_USER_PASSWORD}
+      - MONGO_INITDB_DATABASE=${MONGODB_DATABASE}
     volumes:
       - ./db/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
-      - $MONGODB_MOUNT_PATH:/data/db
+      - ./db/tmp:/data/db
 
   # mongo-express:
   #   image: mongo-express
   #   container_name: mongo-express
   #   ports:
-  #     - $MONGOEXPRESS_LOCAL_PORT:$MONGOEXPRESS_DOCKER_PORT
+  #     - 8081:8081
   #   restart: always
   #   environment:
   #     - ME_CONFIG_MONGODB_SERVER=mongo
