--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-NODE_ENV=development # development or production
+NODE_ENV=production # development or production
 
 REACT_APP_PDF_GENERATION_MODE=external # local or external
 
